<resources>
    <string name="app_name">Code05</string>
    <string name="email_account">Email/Account</string>
    <string name="password">Password</string>
    <string name="see">See</string>
    <string name="login">Login</string>
    <string name="guet">guet</string>
    <string name="remember_password">Remember Password</string>
    <string name="sign_up">Sign up</string>
    <string name="shared_preferences_file_name">sp_login</string>
    <string name="login_account_name">login_account_name</string>
    <string name="login_password">login_password</string>
    <string name="login_remember_password">login_remember_password</string>
</resources>